<resources>
    <string name="app_name">ManageMyFridge</string>
    <string name="app_version">ManageMyFridge ver. 0.0.1</string>
    <string name="item_name">ΙΤΕΜ ΝΑΜΕ</string>
    <string name="expiration_date">EXPIRATION DATE</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="was_it_opened">WAS IT OPENED?</string>
    <string name="add_new_item">ADD NEW ITEM</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_start_screen">StartScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="today">Today</string>
    <string name="other">Other</string>
    <string name="when_was_it_opened">WHEN WAS IT OPENED?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="manage_my_fridge">Manage my Fridge</string>
    <string name="username_or_email">Username or Email</string>
    <string name="email">Email</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">Username</string>
    <string name="expired_items_in_your_fridge">There are still expired items in your fridge</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not assigned</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add">Add</string>
    <string name="find">Find</string>
    <string name="delete">Delete</string>
    <string name="no_match_found">No Match Found</string>
    <string name="record_deleted">Record Deleted</string>
    <string name="productID">TextView</string>
    <string name="productName"></string>
    <string name="expired">Expired</string>
    <string name="no_expired_in_fridge_warning">There are currently no expired items in your fridge! Add more products or just wait a couple days!</string>
    <string name="motivational_text_in_recipes">Millions of food gets wasted every year. You can contribute to the lessening of the food waste by making use of as many items in your kitchen as you can. Enter your list of ingredients and find recipes that you\'ll love, while contributing to the zero waste movement! Input your diet preferences, the kind of meal you want to eat and the ingredients of your choice!</string>
    <string name="recipes">Recipes</string>
    <string name="find_recipes">Find Recipes!</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="check_from_fridge">Check from fridge</string>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipes_found">Recipes Found</string>
    <string name="no_recipes_found_warning">We didn\'t find any recipes for the ingredients you requested. Wait for the next update when we will add more recipes! Sorry for the inconveniece!</string>
    <string name="zero_waste_tips">Zero Waste Tips</string>
    <string name="zero_waste_tips_description">Check out these useful tips below on important matters like how to store products in your fridge correctly to keep them fresher, how to make use of vegetable trimmings and other waste reducing tips!</string>
    <string name="tomorrow_to_expire">Tomorrow to expire</string>
    <string name="today_to_expire">Today to expire</string>
    <string name="soon_to_expire">Soon to expire</string>
    <string name="empty_fridge_warning">Your fridge is empty! Press the button below to add a new product!</string>
    <string name="my_fridge">My Fridge</string>
    <string name="open_product">Open Product</string>
    <string name="edit">Edit</string>
    <string name="_01_01_2021">01/01/2021</string>
    <string name="milk">Milk</string>
    <string name="home">Home</string>
    <string name="expired_items">Expired Products</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="wipe_app_data">Wipe App Data</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="product_type">Product Type</string>
    <string name="type">Type</string>
    <string name="log_out">Log out</string>
    <string name="favourites">Favourites</string>
    <string name="your_favourite_zero_waste_tips">Your favourite zero waste tips:</string>
    <string name="your_favourite_recipes">Your favourite recipes:</string>
    <string name="favourites_description">Here you can easily find your favourite recipes and zero waste tips!</string>
    <string name="change_picture">Change Picture</string>

    <string-array name="units">
        <item>ml</item>
        <item>kg</item>
        <item>whole</item>
        <item>packet</item>
    </string-array>

    <string-array name="types">
        <item>Fruit</item>
        <item>Vegetable</item>
        <item>Dairy</item>
        <item>Drink</item>
        <item>Grain</item>
        <item>Meat</item>
        <item>Sweet</item>
        <item>Other</item>
        <item>Milk</item>
        <item>Eggs</item>
        <item>Flour</item>
        <item>Poultry</item>
        <item>Tomato</item>
        <item>Sausage</item>
        <item>Spinach</item>
        <item>Fish</item>
        <item>Nut</item>
    </string-array>

    <string-array name="categories">
        <item>ml</item>
        <item>kg</item>
        <item>whole</item>
        <item>packet</item>
    </string-array>

    <string-array name="meal_type">
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
        <item>Dessert</item>
    </string-array>

    <string-array name="diet_preference">
        <item>Low Carb</item>
        <item>Low Fat</item>
        <item>Keto</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Pescatarian</item>
        <item>Dairy Free</item>
        <item>Gluten Free</item>
        <item>Nut Free</item>
        <item>Paleo</item>
        <item>Mediterranean</item>
        <item>Other</item>
    </string-array>

    <string-array name="ingredient_groups">
        <item>Dairy</item>
        <item>Meats</item>
        <item>Vegetables</item>
        <item>Fruit</item>
        <item>Grains</item>
        <item>Fish</item>
        <item>Legumes</item>
        <item>Condiments</item>
        <item>Dairy Alternatives</item>
        <item>Nuts</item>
    </string-array>

    <string-array name="dairy_group">
        <item>Eggs</item>
        <item>Milk</item>
        <item>Butter</item>
        <item>Cheese</item>
        <item>Butter</item>
        <item>Yogurt</item>
        <item>Heavy Cream</item>
        <item>Sour Cream</item>
        <item>Ice Cream</item>
    </string-array>

    <string-array name="meats_group">
        <item>Beef</item>
        <item>Pork</item>
        <item>Bacon</item>
        <item>Chicken Thighs</item>
        <item>Chicken Breast</item>
        <item>Chicken Wings</item>
        <item>Turkey</item>
        <item>Duck</item>
        <item>Lamb</item>
        <item>Liver</item>
    </string-array>

    <string-array name="vegetables_group">
        <item>Beef</item>
        <item>Pork</item>
        <item>Bacon</item>
        <item>Chicken Thighs</item>
        <item>Chicken Breast</item>
        <item>Chicken Wings</item>
        <item>Turkey</item>
        <item>Duck</item>
        <item>Lamb</item>
        <item>Liver</item>
    </string-array>

    <string-array name="fruits_group">
        <item>Beef</item>
        <item>Pork</item>
        <item>Bacon</item>
        <item>Chicken Thighs</item>
        <item>Chicken Breast</item>
        <item>Chicken Wings</item>
        <item>Turkey</item>
        <item>Duck</item>
        <item>Lamb</item>
        <item>Liver</item>
    </string-array>

    <string-array name="grains_group">
        <item>Beef</item>
        <item>Pork</item>
        <item>Bacon</item>
        <item>Chicken Thighs</item>
        <item>Chicken Breast</item>
        <item>Chicken Wings</item>
        <item>Turkey</item>
        <item>Duck</item>
        <item>Lamb</item>
        <item>Liver</item>
    </string-array>

    <string-array name="fish_group">
        <item>Beef</item>
        <item>Pork</item>
        <item>Bacon</item>
        <item>Chicken Thighs</item>
        <item>Chicken Breast</item>
        <item>Chicken Wings</item>
        <item>Turkey</item>
        <item>Duck</item>
        <item>Lamb</item>
        <item>Liver</item>
    </string-array>

    <string-array name="legumes_group">
        <item>Beef</item>
        <item>Pork</item>
        <item>Bacon</item>
        <item>Chicken Thighs</item>
        <item>Chicken Breast</item>
        <item>Chicken Wings</item>
        <item>Turkey</item>
        <item>Duck</item>
        <item>Lamb</item>
        <item>Liver</item>
    </string-array>

    <string-array name="condiments_group">
        <item>Beef</item>
        <item>Pork</item>
        <item>Bacon</item>
        <item>Chicken Thighs</item>
        <item>Chicken Breast</item>
        <item>Chicken Wings</item>
        <item>Turkey</item>
        <item>Duck</item>
        <item>Lamb</item>
        <item>Liver</item>
    </string-array>

    <string-array name="dairy_alts_group">
        <item>Beef</item>
        <item>Pork</item>
        <item>Bacon</item>
        <item>Chicken Thighs</item>
        <item>Chicken Breast</item>
        <item>Chicken Wings</item>
        <item>Turkey</item>
        <item>Duck</item>
        <item>Lamb</item>
        <item>Liver</item>
    </string-array>

    <string-array name="nuts_group">
        <item>Beef</item>
        <item>Pork</item>
        <item>Bacon</item>
        <item>Chicken Thighs</item>
        <item>Chicken Breast</item>
        <item>Chicken Wings</item>
        <item>Turkey</item>
        <item>Duck</item>
        <item>Lamb</item>
        <item>Liver</item>
    </string-array>

</resources>