<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/homeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayoutWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/warningExpiredButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:onClick="goToExpired"
                app:icon="@drawable/ic_warning"
                app:iconSize="64dp"
                app:iconTint="#FFC107"
                app:strokeColor="#FFFFFF" />

            <TextView
                android:id="@+id/expired_items_warning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp"
                android:text="@string/expired_items_in_your_fridge"
                android:textAlignment="center"
                android:textColor="#FFC107"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/todayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/today_to_expire"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/todayExpireRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todayExpireRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayTextView">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tomorrowTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tomorrow_to_expire"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tomorrowExpireRecyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/todayExpireRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tomorrowExpireRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="319dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/soonTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/soon_to_expire"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="?attr/colorPrimaryVariant"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.148"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tomorrowExpireRecyclerView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/soonExpireRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.486"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/soonTextView"
            app:layout_constraintVertical_bias="0.0">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</FrameLayout>